added collapse to store locations

--- a/carrentalsystem/crcapp/templates/store/storeLocation.html
+++ b/carrentalsystem/crcapp/templates/store/storeLocation.html
@@ -10,100 +10,143 @@
 
   <section class="content-section p-3 p-lg-5 d-flex flex-column" id="stores">
     <h3 class="mb-5 mt-2">Stores</h3>
-    <div class="row">
-      <div class="col-md-12 text-left">
-        <hr>
-        <h4>New South Wales</h4>
-        <br>
-      </div>
-    {% for store in NSW  %}
-     <div class="col-md-2 items p-2 text-center">
-         <div class="item p-3">
-                <h5>{{store.storeName}}</h5>
-                <p><small>Street:</small> {{store.street}}</p>
-                <p><small>City:</small> {{store.city}}</p>
-                <p><small>State:</small> {{store.state }}</p>
-                <p><small>Contact Number:</small> {{store.storePhone}}</p>
-         </div>
-      </div>
-      {% endfor %}
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-left">
-        <br>
-        <hr>
-        <h4>Queensland</h4>
-        <br>
-      </div>
-    {% for store in QLD  %}
-     <div class="col-md-2 items p-2 text-center">
-         <div class="item p-3">
-                <h5>{{store.storeName}}</h5>
-                <p><small>Street:</small> {{store.street}}</p>
-                <p><small>City:</small> {{store.city}}</p>
-                <p><small>State:</small> {{store.state }}</p>
-                <p><small>Contact Number:</small> {{store.storePhone}}</p>
-         </div>
-      </div>
-      {% endfor %}
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-left">
-        <br>
-        <hr>
-        <h4>South Australia</h4>
-        <br>
-      </div>
-    {% for store in SA  %}
-     <div class="col-md-2 items p-2 text-center">
-         <div class="item p-3">
-                <h5>{{store.storeName}}</h5>
-                <p><small>Street:</small> {{store.street}}</p>
-                <p><small>City:</small> {{store.city}}</p>
-                <p><small>State:</small> {{store.state }}</p>
-                <p><small>Contact Number:</small> {{store.storePhone}}</p>
-         </div>
-      </div>
-      {% endfor %}
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-left">
-        <br>
-        <hr>
-        <h4>Tasmania</h4>
-        <br>
-      </div>
-    {% for store in TAS  %}
-     <div class="col-md-2 items p-2 text-center">
-         <div class="item p-3">
-                <h5>{{store.storeName}}</h5>
-                <p><small>Street:</small> {{store.street}}</p>
-                <p><small>City:</small> {{store.city}}</p>
-                <p><small>State:</small> {{store.state }}</p>
-                <p><small>Contact Number:</small> {{store.storePhone}}</p>
-         </div>
-      </div>
-      {% endfor %}
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-left">
-        <br>
-        <hr>
-        <h4>Victoria</h4>
-        <br>
-      </div>
-    {% for store in VIC  %}
-     <div class="col-md-2 items p-2 text-center">
-         <div class="item p-3">
-                <h5>{{store.storeName}}</h5>
-                <p><small>Street:</small> {{store.street}}</p>
-                <p><small>City:</small> {{store.city}}</p>
-                <p><small>State:</small> {{store.state }}</p>
-                <p><small>Contact Number:</small> {{store.storePhone}}</p>
-         </div>
-      </div>
-      {% endfor %}
-    </div>
+      <div class="panel-group" id="accordion">
+        <div class="card">
+          <div class="card-header" id="heading0">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
+                  New South Wales &nbsp; &nbsp;</a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div id="collapse0" class="panel-collapse collapse in">
+            <div class="panel-body row">
+              {% for store in NSW  %}
+              <div class="col-md-2 items p-2 text-center">
+                  <div class="item p-3">
+                          <h5>{{store.storeName}}</h5>
+                          <p><small>Street:</small> {{store.street}}</p>
+                          <p><small>City:</small> {{store.city}}</p>
+                          <p><small>State:</small> {{store.state }}</p>
+                          <p><small>Contact Number:</small> {{store.storePhone}}</p>
+                  </div>
+                </div>
+                {% endfor %}            
+            </div>
+          </div>
+        <div class="card">
+          <div class="card-header" id="heading1">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                  Queensland &nbsp; &nbsp;</a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div id="collapse1" class="panel-collapse collapse in">
+            <div class="panel-body row">
+              {% for store in QLD  %}
+              <div class="col-md-2 items p-2 text-center">
+                  <div class="item p-3">
+                          <h5>{{store.storeName}}</h5>
+                          <p><small>Street:</small> {{store.street}}</p>
+                          <p><small>City:</small> {{store.city}}</p>
+                          <p><small>State:</small> {{store.state }}</p>
+                          <p><small>Contact Number:</small> {{store.storePhone}}</p>
+                  </div>
+                </div>
+                {% endfor %}            
+            </div>
+          </div>
+        <div class="card">
+          <div class="card-header" id="heading2">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                  South Australia &nbsp; &nbsp;</a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div id="collapse2" class="panel-collapse collapse in">
+            <div class="panel-body row">
+              {% for store in SA  %}
+              <div class="col-md-2 items p-2 text-center">
+                  <div class="item p-3">
+                          <h5>{{store.storeName}}</h5>
+                          <p><small>Street:</small> {{store.street}}</p>
+                          <p><small>City:</small> {{store.city}}</p>
+                          <p><small>State:</small> {{store.state }}</p>
+                          <p><small>Contact Number:</small> {{store.storePhone}}</p>
+                  </div>
+                </div>
+                {% endfor %}            
+            </div>
+          </div>
+        <div class="card">
+          <div class="card-header" id="heading3">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                  Tasmania &nbsp; &nbsp;</a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div id="collapse3" class="panel-collapse collapse in">
+            <div class="panel-body row">
+              {% for store in TAS  %}
+              <div class="col-md-2 items p-2 text-center">
+                  <div class="item p-3">
+                          <h5>{{store.storeName}}</h5>
+                          <p><small>Street:</small> {{store.street}}</p>
+                          <p><small>City:</small> {{store.city}}</p>
+                          <p><small>State:</small> {{store.state }}</p>
+                          <p><small>Contact Number:</small> {{store.storePhone}}</p>
+                  </div>
+                </div>
+                {% endfor %}            
+            </div>
+          </div>
+        <div class="card">
+          <div class="card-header" id="heading4">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                  Victoria &nbsp; &nbsp;</a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div id="collapse4" class="panel-collapse collapse in">
+            <div class="panel-body row">
+              {% for store in VIC  %}
+              <div class="col-md-2 items p-2 text-center">
+                  <div class="item p-3">
+                          <h5>{{store.storeName}}</h5>
+                          <p><small>Street:</small> {{store.street}}</p>
+                          <p><small>City:</small> {{store.city}}</p>
+                          <p><small>State:</small> {{store.state }}</p>
+                          <p><small>Contact Number:</small> {{store.storePhone}}</p>
+                  </div>
+                </div>
+                {% endfor %}            
+            </div>
+          </div>
+        </div>
 </section>
 
 {% endblock %}
