--- a/carrentalsystem/crcapp/templates/index.html
+++ b/carrentalsystem/crcapp/templates/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="{% static "css/select2-bootstrap.css" %}">
    
     <!-- Fonts -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
