updated store locations

--- a/carrentalsystem/crcapp/templates/store/storeLocation.html
+++ b/carrentalsystem/crcapp/templates/store/storeLocation.html
@@ -17,7 +17,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
-                  New South Wales &nbsp; &nbsp;</a>
+                  New South Wales &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -44,7 +44,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                  Queensland &nbsp; &nbsp;</a>
+                  Queensland &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -71,7 +71,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                  South Australia &nbsp; &nbsp;</a>
+                  South Australia &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -98,7 +98,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                  Tasmania &nbsp; &nbsp;</a>
+                  Tasmania &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -125,7 +125,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                  Victoria &nbsp; &nbsp;</a>
+                  Victoria &nbsp; </a>
                 </h4>
               </div>
             </div>
