--- a/carrentalsystem/crcapp/templates/public/stores.html
+++ b/carrentalsystem/crcapp/templates/public/stores.html
@@ -19,7 +19,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
-                  New South Wales &nbsp; &nbsp;</a>
+                  New South Wales &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -46,7 +46,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                  Queensland &nbsp; &nbsp;</a>
+                  Queensland &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -73,7 +73,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                  South Australia &nbsp; &nbsp;</a>
+                  South Australia &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -100,7 +100,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                  Tasmania &nbsp; &nbsp;</a>
+                  Tasmania &nbsp;</a>
                 </h4>
               </div>
             </div>
@@ -127,7 +127,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                  Victoria &nbsp; &nbsp;</a>
+                  Victoria &nbsp;</a>
                 </h4>
               </div>
             </div>
