--- a/carrentalsystem/crcapp/templates/public/register.html
+++ b/carrentalsystem/crcapp/templates/public/register.html
@@ -120,7 +120,7 @@
                                             <div class="form-group">
                                                 <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                                     <div class="input-group-addon" ></i></div>
-                                                    <input type="text" name="postalCodeAddres" class="form-control" id="postalCode"
+                                                    <input type="number" name="postalCodeAddres" class="form-control" id="postalCode"
                                                         placeholder="Postal Code" required autofocus>
                                                 </div>
                                             </div>
@@ -157,7 +157,7 @@
 				<div class="form-group">
 					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 						<div class="input-group-addon" ></i></div>
-						<input type="text" name="driverLicenceNumber" class="form-control" id="DriverLicenseNumber"
+						<input type="number" name="driverLicenceNumber" class="form-control" id="DriverLicenseNumber"
 							placeholder="Drivers License Number" autofocus> 
 					</div>
 				</div>
@@ -224,7 +224,7 @@
 				<div class="form-group">
 					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 						<div class="input-group-addon"></i></div>
-						<input type="text" name="phoneNumber" class="form-control" id="phoneNumber"
+						<input type="number" name="phoneNumber" class="form-control" id="phoneNumber"
 							placeholder="Phone Number" required autofocus>
 					</div>
 				</div>
