--- a/carrentalsystem/crcapp/static/css/publicstyles.css
+++ b/carrentalsystem/crcapp/static/css/publicstyles.css
@@ -28,7 +28,7 @@
     overflow: hidden;
 }
 
-.img-center{
+.img-center, .divs-center{
   text-align: center;
   margin: 0 auto;
   display: block;
@@ -51,7 +51,7 @@
   background-color: #fff;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
-  padding:5px;
+  padding:10px;
 }
 
 .nav-tabs>li>a {
@@ -59,5 +59,13 @@
   line-height: 1.42857143;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
-  padding:5px;
+  padding:10px;
+  font-size: 14px;
+
+}
+
+.orderTabs td{
+  padding-top: 10px;
+  background-color: #fcfcfc;
+  color: #000 !important;
 }
