--- a/carrentalsystem/crcapp/static/css/style.css
+++ b/carrentalsystem/crcapp/static/css/style.css
@@ -185,6 +185,10 @@ a:hover{
     color:#f6f6f6;
 }
 
+.cursorPointer{
+    cursor: pointer;
+}
+
 .subtopbar p{
     font-size:16px;
     font-weight:bold !important;
