--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -31,10 +31,10 @@
 
   <body>
       <nav class="navbar topbar navbar-dark sticky-top bg-light flex-md-nowrap pt-2 pb-2 z-depth-2">
-        <a class="navbar-brand col-sm-12 col-md-2 mr-0" href="#">CRC System</a>
+        <span class="navbar-brand col-sm-12 col-md-2 mr-0" style="color:#4885ed;">CRC System</span>
         <!-- data-toggle="collapse" href="#sidebar" role="button" aria-expanded="false" aria-controls="sidebar"-->
         
-        <div class="col-sm-12 col-md-8">
+        <div class="col-sm-12 col-md-8 cursorPointer">
             <a id="collapse"><i class="fas fa-bars py-2 p-1"></i></a>
         </div>
         <div class="col-md-2">
@@ -60,7 +60,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/management/profile">
                           <span><i class="fa fa-user"></i></span>
                           Profile</span>
                         </a>
