--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -59,6 +59,21 @@
                 <div class="col-md-12">
                     <div class="row">
                       <div class="col-md-8 col-sm-12 box-container">
+                          
+
+                            <div class="row mt-2">
+                                    
+                                    <div class="col-md-12 row">
+                                        <div class="col-md-4 boxes">
+                                                <a href="/management/profile">
+                                                    <span class="text-center"><i class="fas fa-user"></i></span>
+                                                    Profile
+                                                  </a>
+                                        </div>
+                                       
+                                    </div>
+                                </div>
+
                         <div class="row mt-2">
                             <h5>Bookings</h5>
                             <hr>
@@ -67,12 +82,6 @@
                                         <a href="/management/booking/order">
                                             <span class="text-center"><i class="fas fa-shopping-cart"></i></span>
                                             Book Vehicles
-                                          </a>
-                                </div>
-                                <div class="col-md-4 boxes">
-                                        <a href="">
-                                            <span class="text-center"><i class="fas fa-file-invoice"></i></span>
-                                            Invoices
                                           </a>
                                 </div>
                                 <div class="col-md-4 boxes">
