--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -184,7 +184,47 @@
                        </div>  
                       
                            <div class="col-md-4 col-sm-12" >
-                                graphs
+                                <div class="items col-md-12 mt-2 mb-2 pill row">
+                                    <div class="col-md-4">
+                                            <i class="fas fa-car fa-5x m-2"></i>
+                                    </div>
+                                    <div class="col-md-8 pt-3">
+                                            <h4 class="text-center">Total Vehicles</h4>
+                                            <h5 class="text-center">{{ counts.vehicles }}</h5>
+                                    </div>
+                                    
+                                </div>
+
+                                <div class="items col-md-12 mt-2 mb-2 pill row">
+                                        <div class="col-md-4">
+                                                <i class="fas fa-car fa-5x m-2"></i>
+                                        </div>
+                                        <div class="col-md-8 pt-3">
+                                                <h4 class="text-center">Total Stores</h4>
+                                                <h5 class="text-center">{{ counts.stores }}</h5>
+                                        </div>
+                                    
+                                </div>
+                                <div class="items col-md-12 mt-2 mb-2 pill row">
+                                        <div class="col-md-4">
+                                                <i class="fas fa-car fa-5x m-2"></i>
+                                        </div>
+                                        <div class="col-md-8 pt-3">
+                                                <h4 class="text-center">Total Customers</h4>
+                                                <h5 class="text-center">{{ counts.customers }}</h5>
+                                        </div>
+                                        
+                                </div>
+                                <div class="items col-md-12 mt-2 mb-2 pill row">
+                                        <div class="col-md-4">
+                                                <i class="fas fa-car fa-5x m-2"></i>
+                                        </div>
+                                        <div class="col-md-8 pt-3">
+                                                <h4 class="text-center">Total Orders</h4>
+                                                <h5 class="text-center">{{ counts.orders }}</h5>
+                                        </div>
+                                        
+                                </div>
                             </div>  
                     </div>
                        
