added inspection into view vehicle page. Currently all set to pass

--- a/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
+++ b/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
@@ -24,6 +24,7 @@
                 <th>Series</th>
                 <th>Year</th>
                 <th>Store</th>
+                <th>Inspection</th>
               </tr>
               </thead>
               <tbody id="records">
@@ -36,10 +37,8 @@
                             
                             <td class="pdttable">{{ vehicle.series }}</td> 
                             <td class="pdttable">{{ vehicle.year }}</td> 
-                            <td class="pdttable">
-                              Brisbane
-
-                      </td>                         
+                            <td class="pdttable">Brisbane</td>     
+                            <td class="pdttable">Pass</td>                    
                         </tr>
                     {% endfor %}
               </tbody>
@@ -51,6 +50,7 @@
                 <th>Series</th>
                 <th>Year</th>
                 <th>Store</th>
+                <th>Inspection</th>
               </tr>
               </tfoot>
             </table>
