--- a/carrentalsystem/crcapp/templates/public/register.html
+++ b/carrentalsystem/crcapp/templates/public/register.html
@@ -6,7 +6,7 @@
                 <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                           <li class="breadcrumb-item"><a href="/">Home</a></li>
-                          <li class="breadcrumb-item">Sign up</li>
+                          <li class="breadcrumb-item active">Sign up</li>
                         </ol>
                       </nav>
           </div>
