--- a/carrentalsystem/crcapp/templates/public/stores.html
+++ b/carrentalsystem/crcapp/templates/public/stores.html
@@ -7,7 +7,7 @@
                 <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                           <li class="breadcrumb-item"><a href="/">Home</a></li>
-                          <li class="breadcrumb-item">Stores</li>
+                          <li class="breadcrumb-item active">Stores</li>
                         </ol>
                       </nav>
           </div>
