--- a/carrentalsystem/crcapp/templates/customer/create.html
+++ b/carrentalsystem/crcapp/templates/customer/create.html
@@ -1,269 +1,151 @@
 {% extends '../base.html' %}
-{% block title %}Create Customer{% endblock %}
+{% block title %}{{currentOperation}} Customer{% endblock %}
 {% block breadcrumb %}
-<li class="breadcrumb-item active" aria-current="page">Create Customer</li>
+<li class="breadcrumb-item"><a href="{% url 'viewCustomers' %}">Customer Management</a></li>
+<li class="breadcrumb-item active" aria-current="page">Register New Customer</li>
 {% endblock %}
 {% block content %}
 <!-- Error message box will be shown only if the msg variable has some value -->
 {% if msg != "" %}
-<div class="row">
 <div class="col-md-12 col-sm-12">
 	<!-- Checking whether it is a danger type or info type needed for the box
 		Will be checked by mtype is d or i
 		-->
 	{% if mtype == "d" or mtype == "a" %}
-	<div class="alert alert-danger">
-		{% elif mtype == "i" %}
+		<div class="alert alert-danger">
+	{% elif mtype == "i" %}
 		<div class="alert alert-info">
-			{% endif %}
-			<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-			{% if mtype == "a" %}
-			{% for key, values in msg %}
+	{% endif %}
+	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+	{% if mtype == "a" %}
+		{% for key, values in msg %}
 			<p>{{ key }} : {{ values.0 }}</p>
-			{% endfor %}
-			{% else %}
-			<p>{{ msg }}</p>
-			{% endif %}
+		{% endfor %}
+	{% else %}
+		<p>{{ msg }}</p>
+	{% endif %}
 		</div>
 	</div>
 </div>
 {% endif %}
-<form action="/management/create/customer" method="post">
-	{% csrf_token %}
 	<div class="container">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h2>Register New Customer</h2>
-				<hr>
+		<h2 class="text-center">Register New Customer</h2>
+		<div class="col-md-12">
+			<hr>
+		</div>
+		<form action="{% url 'customerCreate' %}" method="POST">
+		{% csrf_token %}
+		<div class="row col-md-12">
+			<h4>Name</h4>
+		</div>
+		<div class="form-group row">
+			<label for="firstName" class="col-sm-2 col-form-label">First Name</label>
+			<div class="col-sm-4">
+				<input type="text" name="firstName" class="form-control" id="firstName"
+				placeholder="First Name" required>
+			</div>
+			<label for="lastName" class="col-sm-2 col-form-label">Last Name</label>
+			<div class="col-sm-4">
+				<input type="text" name="lastName" class="form-control" id="lastName"
+				placeholder="Last Name" required>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<h5>Name</h5>
-				<div class="row pt-4">
-					<div class="col-md-6 row">
-						<div class="col-md-3 field-label-responsive">
-							<label for="firstName">First Name</label>
-						</div>
-						<div class="col-md-9">
-							<div class="form-group">
-								<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-									<div class="input-group-addon" ></i></div>
-									<input type="text" name="firstName" class="form-control" id="firstName"
-										placeholder="First Name" required autofocus>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 row">
-						<div class="col-md-3 field-label-responsive">
-							<label for="lastName">Last Name</label>
-						</div>
-						<div class="col-md-9">
-							<div class="form-group">
-								<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-									<div class="input-group-addon" ></i></div>
-									<input type="text" name="lastName" class="form-control" id="lastName"
-										placeholder="Last Name" required autofocus>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-        </div>
-        <div class="row">
-                <div class="col-md-12">
-                    <h5>Address</h5>
-                    <div class="row pt-4">
-                        <div class="col-md-6 row">
-                            <div class="col-md-3 field-label-responsive">
-                                    <label for="streetAddress">Street Address</label>
-                            </div>
-                            <div class="col-md-9">
-                                    <div class="form-group">
-                                            <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                                <div class="input-group-addon" ></i></div>
-                                                <input type="text" name="streetAddress" class="form-control" id="streetAddress"
-                                                    placeholder="Street" required autofocus>
-                                            </div>
-                                    </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 row">
-                                <div class="col-md-3 field-label-responsive">
-                                        <label for="city">City</label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="form-group">
-                                            <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                                <div class="input-group-addon" ></i></div>
-                                                <input type="text" name="city" class="form-control" id="city"
-                                                    placeholder="City" required autofocus>
-                                            </div>
-                                        </div>
-                                    </div>
-                        </div>
-                    </div>
-
-                    <div class="row mt-3">
-                            <div class="col-md-6 row">
-                                    <div class="col-md-3 field-label-responsive">
-                                            <label for="postalCode">Postal Code</label>
-                                        </div>
-                                        <div class="col-md-9">
-                                            <div class="form-group">
-                                                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                                    <div class="input-group-addon" ></i></div>
-                                                    <input type="text" name="postalCode" class="form-control" id="postalCode"
-                                                        placeholder="Postal Code" required autofocus>
-                                                </div>
-                                            </div>
-                                        </div>
-                            </div>
-                            <div class="col-md-6 row">
-                                    <div class="col-md-3 field-label-responsive">
-                                            <label for="state">State</label>
-                                        </div>
-                                        <div class="col-md-9">
-                                            <div class="form-group">
-                                                <select class="custom-select" name="state" required>
-                                                    <option value="">Select a State</option>
-                                                    <option value="NSW">New South Wales</option>
-                                                    <option value="NT">Northern Territory</option>
-                                                    <option value="QLD">Queensland</option>
-                                                    <option value="SA">South Australia</option>
-                                                    <option value="TS">Tasmania</option>
-                                                    <option value="VIC">Victoria</option>
-                                                    <option value="WA">Western Australia</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-                        
-                </div>
-            </div>
-		<div class="row">
-			<div class="col-md-3 field-label-responsive">
-				<label for="DriverLicenseNumber">Drivers License Number</label>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-						<div class="input-group-addon" ></i></div>
-						<input type="text" name="DriverLicenseNumber" class="form-control" id="DriverLicenseNumber"
-							placeholder="Drivers License Number" required autofocus> 
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="form-control-feedback">
-					<span class="text-danger align-middle">
-						<!-- Put Driver's License Number validation error messages here -->
-					</span>
-				</div>
+		<div class="form-group row">
+			<label for="gender" class="col-sm-2 col-form-label">Gender</label>
+			<div class="col-sm-10">
+				<select class="custom-select" name="gender" required>
+					<option value="" selected disabled>Select a Gender</option>
+					<option value="M">Male</option>
+					<option value="F">Female</option>
+					<option value="O">Other</option>
+				</select>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-3 field-label-responsive">
-				<label for="DOB">Date Of Birth</label>
+		<div class="row col-md-12 mb-2">
+			<h4>Address</h4>
+		</div>
+		<div class="form-group row">
+			<label for="streetAddress" class="col-sm-2 col-form-label">Street Address</label>
+			<div class="col-sm-4 mb-3">
+				<input type="text" name="streetAddress" class="form-control" id="streetAddress"
+				placeholder="Street" required>
 			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-						<div class="input-group-addon" ></i></div>
-						<!-- <input type="text" name="DOB" class="form-control" id="DOB"
-							placeholder="date of Birth" required autofocus> -->
-						<input data-date-format="dd/mm/yyyy" class="form-control"
-							id="datepicker" placeholder="dd/mm/yyyy" required autofocus>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="form-control-feedback">
-					<span class="text-danger align-middle">
-						<!-- Put DOB validation error messages here -->
-					</span>
-				</div>
+			<label for="city" class="col-sm-2 col-form-label">City</label>
+			<div class="col-sm-4 mb-2">
+				<input type="text" name="cityAddress" class="form-control" id="city"
+				placeholder="City" required>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-3 field-label-responsive">
-				<label for="phoneNumber">Phone Number</label>
+		<div class="form-group row">
+			<label for="postCodeAddress" class="col-sm-2 col-form-label">Postal Code</label>
+			<div class="col-sm-4 mb-3">
+				<input type="text" name="postCodeAddress" class="form-control" id="postalCode"
+				placeholder="Postal Code" required>
 			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-						<div class="input-group-addon"></i></div>
-						<input type="text" name="phoneNumber" class="form-control" id="phoneNumber"
-							placeholder="Phone Number" required autofocus>
-					</div>
+			<label for="stateAddress" class="col-sm-2 col-form-label">State</label>
+				<div class="col-sm-4 mb-3">
+					<select class="custom-select" name="stateAddress" required>
+						<option value="" selected disabled>Select a State</option>
+						<option value="NSW">New South Wales</option>
+						<option value="NT">Northern Territory</option>
+						<option value="QLD">Queensland</option>
+						<option value="SA">South Australia</option>
+						<option value="TS">Tasmania</option>
+						<option value="VIC">Victoria</option>
+						<option value="WA">Western Australia</option>
+					</select>
 				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="form-control-feedback">
-					<span class="text-danger align-middle">
-						<!-- Put phone number validation error messages here -->
-					</span>
-				</div>
+		</div>
+		<div class="row col-md-12 mb-2">
+			<h4>Other Details</h4>
+		</div>
+		<div class="form-group row">
+			<label for="driverLicenseNumber" class="col-sm-3 col-form-label">Drivers License Number</label>
+			<div class="col-sm-7 mb-2">
+				<input type="text" name="driverLicenseNumber" class="form-control" id="DriverLicenseNumber"
+				placeholder="Drivers License Number" required>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-3 field-label-responsive">
-				<label for="email">Email Address</label>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-						<div class="input-group-addon"></i></div>
-						<input type="email" name="email" class="form-control" id="email"
-							placeholder="you@example.com" required autofocus>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="form-control-feedback">
-					<span class="text-danger align-middle">
-						<!-- Put e-mail validation error messages here -->
-					</span>
-				</div>
+		<div class="form-group row">
+			<label for="DOB" class="col-sm-3 col-form-label">Date Of Birth</label>
+			<div class="col-sm-7 mb-2">
+				<input data-date-format="yyyy-mm-dd" class="form-control"
+				id="DOB" name="DOB" placeholder="yyyy-mm-dd" required>
 			</div>
 		</div>
-		
-		<div class="row">
-			<div class="col-md-3 field-label-responsive">
-				<label for="occupation">Occupation</label>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-						<div class="input-group-addon" ></i></div>
-						<input type="text" name="occupation" class="form-control" id="occupation"
-							placeholder="Occupation" required autofocus>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="form-control-feedback">
-					<span class="text-danger align-middle">
-						<!-- Put first name validation error messages here -->
-					</span>
-				</div>
+		<div class="form-group row">
+			<label for="phoneNumber" class="col-sm-3 col-form-label">Phone Number</label>
+			<div class="col-sm-7 mb-2">
+				<input type="text" name="phoneNumber" class="form-control" id="phoneNumber"
+				placeholder="Phone Number" required>
 			</div>
 		</div>
-		<div class="row justify-content-md-center">
-			<div class="col-md-4 text-center">
-				<button type="submit" class="btn btn-success"><i class="fa fa-user-plus"></i> Register</button>
+		<div class="form-group row">
+			<label for="email" class="col-sm-3 col-form-label">Email Address</label>
+			<div class="input-group col-sm-7 mb-2">
+				<div class="input-group-prepend">
+					<span class="input-group-text" id="basic-addon1">@</span>
+				</div>
+				<input type="email" name="email" class="form-control" id="email"
+				placeholder="you@example.com" required>
 			</div>
 		</div>
-
-</div>
+		<div class="form-group row">
+				<label for="occupation" class="col-sm-3 col-form-label">Occupation</label>
+			<div class="col-sm-7 mb-3">
+				<input type="text" name="occupation" class="form-control" id="occupation"
+				placeholder="Occupation" required>
+			</div>
+		</div>
+		<div class="form-group row">
+		<button type="submit" class="btn btn-success btn-block"><i class="fa fa-user-plus"></i> Register</button>
+		</div>
+	</div>
 </form>
 {% endblock %}
 {% block scripts %}
 <script type="text/javascript">
-	$('#datepicker').datepicker({
+	$("#DOB").datepicker({
 	    weekStart: 1,
 	    daysOfWeekHighlighted: "6,0",
 	    autoclose: true,
