--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -30,7 +30,7 @@
 
   <body>
       <nav class="navbar topbar navbar-dark sticky-top bg-light flex-md-nowrap pt-2 pb-2 z-depth-2">
-        <a class="navbar-brand col-sm-12 col-md-2 mr-0" href="#">CRC System</a>
+        <a class="navbar-brand col-sm-12 col-md-2 mr-0">CRC System</a>
         
          <input class="form-control form-control-dark w-100" type="text" placeholder="Search...." aria-label="Search">
         <ul class="navbar-nav sm-12 px-3">
@@ -44,16 +44,6 @@
  
   
           <main role="main" id="mainContent" class="col pt-3 px-4">
-              <div class="row pb-2 mb-3 border-bottom">
-                  <div class="col-md-12">
-                  <nav aria-label="breadcrumb">
-                      <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/home">Home</a></li>
-                        
-                      </ol>
-                    </nav>
-                    </div>
-              </div>
             <div class="row align-items-center p-4 mb-3 border-bottom">
               
                 <div class="col-md-12">
