added filtering and search to view vehicles

--- a/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
+++ b/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
@@ -19,12 +19,12 @@
               <thead>
               <tr>
                 <th>Vehicle ID</th>
-                <th>Make</th>
-                <th>Model</th>
-                <th>Series</th>
-                <th>Year</th>
-                <th>Store</th>
-                <th>Inspection</th>
+                <th class="select-filter">Make</th>
+                <th class="select-filter">Model</th>
+                <th class="select-filter">Series</th>
+                <th class="select-filter">Year</th>
+                <th class="select-filter">Store</th>
+                <th class="select-filter">Inspection</th>
               </tr>
               </thead>
               <tbody id="records">
@@ -65,11 +65,31 @@
         
 
          $(document).ready(function() {
-                    // datatable initialising
-                        $('#tbl').DataTable({
+           // datatable initialising
+           $('#tbl').DataTable({
+              initComplete: function () {
+                this.api().columns('.select-filter').every( function () {
+                var column = this;
+                var select = $('<select><option value=""></option></select>')
+                    .appendTo( $(column.footer()).empty() )
+                    .on( 'change', function () {
+                        var val = $.fn.dataTable.util.escapeRegex(
+                            $(this).val()
+                        );
+ 
+                        column
+                            .search( val ? '^'+val+'$' : '', true, false )
+                            .draw();
+                    } );
+ 
+                column.data().unique().sort().each( function ( d, j ) {
+                    select.append( '<option value="'+d+'">'+d+'</option>' )
+                } );
+                } );
+              },
                             'paging'      : true, // for pagination
                             'lengthChange': false,
-                            'searching'   : false, //searching
+                            //'searching'   : true, //searching
                             'ordering'    : true, //sorting
                             'info'        : true,
                             'autoWidth'   : true, // keep this true
